l10n: add an extra string to main.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107388 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/main.lang
+++ b/ach/main.lang
@@ -159,7 +159,7 @@ Myero i <a href="http://get.adobe.com/flashplayer/"> Ngec pa Latuku me Adober</a
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox tye naka wa kombedi, ento cik me Latuku me Flash matye romo kelo ber bedo ki kit tic maber.Tim ber <a href="http://get.adobe.com/flashplayer/">i ket ngec me nono</a>oyotoyot.  
+Firefox tye naka wa kombedi, ento cik me Latuku me Flash matye romo kelo ber bedo ki kit tic maber.Tim ber <a href="http://get.adobe.com/flashplayer/">i ket ngec me nono</a>oyotoyot.
 
 
 ;Features
@@ -400,3 +400,9 @@ Yil rwom ne kombedi
 
 ;Update now
 Yil rwom ne kombedi
+
+
+;Supported Devices
+Jami tic ma kicwako te
+
+
