--- a/ar/main.lang
+++ b/ar/main.lang
@@ -385,6 +385,7 @@
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
 تستخدم إصدارة قديمة من فَيَرفُكس. احصل على التحديث كي تبقى آمنًا! <br/> <a href="%s">نزّل التحديث المجاني</a> في أقل من دقيقة لتحصل على آخر المزايا وسرعة أكبر وإصلاحات أمنية.
 
+
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
 يحتاج متصفحك للتحديث! زِد أمان متصفحك في أقل من دقيقة. <br/> ابدأ باستخدام فَيَرفُكس الجديد لتتصفح الوب وتخصصه بشكل أفضل. <br/> التحديث سريع ومجاني!
 
@@ -399,5 +400,9 @@
 
 ;Update now
 حدّث الآن
+
+
+;Supported Devices
+الأجهزة المدعومة
 
 
