--- a/be/main.lang
+++ b/be/main.lang
@@ -355,7 +355,7 @@ Firefox абноўлены
 
 
 ;Firefox Beta for mobile
-Мабільны Firefox Бета 
+Мабільны Firefox Бета
 
 
 ;Firefox for mobile
@@ -375,7 +375,7 @@ Mozilla Firefox. Сучаснае Сеціва для XP.
 
 
 ;Stunning graphics
-Ашаламляльная графіка 
+Ашаламляльная графіка
 
 
 ;The latest technologies
@@ -400,5 +400,9 @@ Mozilla Firefox. Сучаснае Сеціва для XP.
 
 ;Update now
 Абнавіць зараз
+
+
+;Supported Devices
+Supported devices
 
 
