--- a/csb/main.lang
+++ b/csb/main.lang
@@ -355,7 +355,7 @@ Pùlt
 
 
 ;Firefox Beta for mobile
-Firefox Beta dlô ùrzãdzeniów mòbilnëch 
+Firefox Beta dlô ùrzãdzeniów mòbilnëch
 
 
 ;Firefox for mobile
@@ -400,5 +400,9 @@ Aktualizëje zarô
 
 ;Update now
 Aktualizëje zarô
+
+
+;Supported Devices
+Wspiéróné ùrządzenia
 
 
