--- a/eo/main.lang
+++ b/eo/main.lang
@@ -402,3 +402,7 @@ Vi uzas malnovan version de Firefox. Elŝutu <a href="%s">vian aktualigon</a> po
 Aktualigi nun
 
 
+;Supported Devices
+Subtenataj aparatoj
+
+
