--- a/eu/main.lang
+++ b/eu/main.lang
@@ -387,11 +387,12 @@ Firefoxen bertsio zahar bat ari zara erabiltzen. Eskuratu eguneraketa babesean i
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-Bertsio-berritzea behar duzu! Babestu zaitez di-da batean. <br/> Hasi Firefox berria erabiltzen webeko nabigatze eta pertsonalizazio hoberena izateko. <br/> Azkarra eta doakoa da! 
+Bertsio-berritzea behar duzu! Babestu zaitez di-da batean. <br/> Hasi Firefox berria erabiltzen webeko nabigatze eta pertsonalizazio hoberena izateko. <br/> Azkarra eta doakoa da!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-Firefoxen bertsio zaharrago bat ari zara erabiltzen. Eskuratu <a href="%s">eguneraketa</a> babesean ibiltzeko! <br/> Probatu azken ezaugarriak, segurtasun-konponketak eta orain arteko Firefoxik azkarrena. Deskargatu doako bertsio-berritzea di-da batean. 
+Firefoxen bertsio zaharrago bat ari zara erabiltzen. Eskuratu <a href="%s">eguneraketa</a> babesean ibiltzeko! <br/> Probatu azken ezaugarriak, segurtasun-konponketak eta orain arteko Firefoxik azkarrena. Deskargatu doako bertsio-berritzea di-da batean.
+
 
 ;Upgrade now
 Bertsio-berritu orain
@@ -399,5 +400,9 @@ Bertsio-berritu orain
 
 ;Update now
 Eguneratu orain
+
+
+;Supported Devices
+Sostengatutako gailuak
 
 
