--- a/fr/main.lang
+++ b/fr/main.lang
@@ -217,6 +217,7 @@ FAQ {ok}
 ;Videos
 Vidéos
 
+
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
 Sauf <a href="%s">mention</a> contraire, le contenu de ce site est placé sous la licence <br /><a href="%s">Creative Commons Attribution Share-Alike v3.0</a> ou ultérieure.
 
@@ -399,4 +400,9 @@ Mettez-vous à niveau maintenant
 
 ;Update now
 Mettez-vous à jour maintenant
+
+
+;Supported Devices
+Appareils pris en charge
+
 
