--- a/gd/main.lang
+++ b/gd/main.lang
@@ -400,3 +400,9 @@ Tha thu a' cleachdadh seann-tionndadh de Firefox. Faigh <a href="%s">d' ùrachad
 
 ;Update now
 Ùraich an-dràsta
+
+
+;Supported Devices
+Innealan ris a bheil taic
+
+
