--- a/gl/main.lang
+++ b/gl/main.lang
@@ -385,11 +385,14 @@ As últimas tecnoloxías
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
 Está a usar unha versión antiga de Firefox. Actualícese para permanecer seguro!</br>  <a href="%s">Descargue a anovación</a>  en menos dun minuto para poder gozar das últimas características, e melloras na velocidade e na seguridade.
 
+
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
 Precisa unha anovación! Permaneza seguro en menos dun minuto.</br>  Comece a usar o novo Firefox para gozar da mellor navegación e personalización existentes para a Web.</br>  É rápido e de balde!
 
+
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 Está a usar unha versión antiga de Firefox.<a href="%s">Actualícese</a> para permanecer seguro! </br> Goce das últimas características, e melloras de seguridade da versión de Firefox máis rápida. Descargue a anovación de balde en menos dun minuto.
+
 
 ;Upgrade now
 Anove agora
@@ -397,5 +400,9 @@ Anove agora
 
 ;Update now
 Actualice agora
+
+
+;Supported Devices
+Dispositivos compatíbeis
 
 
