--- a/he/main.lang
+++ b/he/main.lang
@@ -385,6 +385,7 @@ Mozilla Firefox. מביאים את הרשת של היום אל XP.
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
 זוהי גרסה ישנה של Firefox. רצוי לעדכן כדי להישאר בצד הבטוח! <br/> <a href="%s">הורדת השדרוג</a> תארך פחות מדקה.
 
+
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
 יש צורך לשדרג! הישארו בטוחים תוך פחות מדקה. <br/> התחילו להשתמש ב־Firefox החדש כדי להנות מהגלישה הטובה ביותר ברשת. <br/> השדרוג מהיר ובחינם!
 
@@ -392,11 +393,16 @@ Mozilla Firefox. מביאים את הרשת של היום אל XP.
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 זוהי גרסה ישנה של Firefox. רצוי <a href="%s">לעדכן</a> כדי להישאר בצד הבטוח! <br/> קבלו את התכונות האחרונות, תיקוני האבטחה בגרסה המהירה ביותר של Firefox עד כה. הורדת השדרוג תארך פחות מדקה.
 
+
 ;Upgrade now
 שדרגו עכשיו
 
 
 ;Update now
 עדכנו עכשיו
+
+
+;Supported Devices
+התקנים נתמכים
 
 
