--- a/hu/main.lang
+++ b/hu/main.lang
@@ -203,7 +203,7 @@ Következő
 
 
 ;MB
-MB {ok} 
+MB {ok}
 
 
 ;MegaBytes
@@ -355,11 +355,11 @@ Számítógép
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile {ok} 
+Firefox Beta for mobile {ok}
 
 
 ;Firefox for mobile
-Firefox for mobile {ok} 
+Firefox for mobile {ok}
 
 
 ;Email
@@ -402,4 +402,7 @@ Frissítsen most
 Frissítsen most
 
 
- 
+;Supported Devices
+Támogatott eszközök
+
+
