--- a/it/main.lang
+++ b/it/main.lang
@@ -385,16 +385,24 @@ Tecnologie all'avanguardia
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
 Stai utilizzando una versione obsoleta di Firefox. Aggiorna subito per la tua sicurezza. <br/> <a href="%s">Scarica l'aggiornamento gratuito</a> in meno di un minuto per scoprire le nuove caratteristiche e assicurarti il massimo della stabilità e della sicurezza.
 
+
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
 Hai bisogno di un aggiornamento! Meno di un minuto per la tua sicurezza. <br/> Navigazione sul Web e possibilità di personalizzazione ai massimi livelli grazie al nuovo Firefox. <br/> È veloce e gratuito.
+
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 Stai utilizzando una versione obsoleta di Firefox. Scarica l'<a href="%s">aggiornamento</a> per essere sempre al sicuro. <br/> Scopri le nuove funzionalità e la sicurezza di un Firefox mai così veloce. Meno di un minuto per scaricare l'aggiornamento gratuito.
 
+
 ;Upgrade now
 Aggiorna adesso
 
+
 ;Update now
 Aggiorna adesso
+
+
+;Supported Devices
+Dispositivi supportati
 
 
