--- a/kn/main.lang
+++ b/kn/main.lang
@@ -289,6 +289,7 @@ MPEG-4 ವಿನ್ಯಾಸ
 ;Journey to the Future with Firefox
 ಫೈರ್ಫಾಕ್ಸಿನೊಂದಿಗೆ  ಮುಂದಿನ ಯಾನವನ್ನು  ಸವಿಯಿರಿ
 
+
 ;Join the Beta Program
 ಬೀಟಾ ಪ್ರೊಗ್ರಾಮ್‌ನಲ್ಲಿ ಭಾಗಿಯಾಗಿ
 
@@ -368,6 +369,7 @@ MPEG-4 ವಿನ್ಯಾಸ
 ;Mozilla Firefox. Bringing the modern Web to XP.
 ಮೊಝಿಲ್ಲಾ ಫೈರ್ಫಾಕ್ಸ್.  XP ಗಾಗಿ ಆಧುನಿಕ ಅಂತರಜಾಲವನ್ನು ಸಾಧ್ಯವಾಗುಸುತ್ತಾ.
 
+
 ;Super speed
 ತ್ವರಿತ ವೇಗ
 
@@ -395,8 +397,12 @@ MPEG-4 ವಿನ್ಯಾಸ
 ;Upgrade now
 ಈಗಲೇ ನವೀಕರಿಸಿ
 
+
 ;Update now
 ಈಗಲೇ ಅಪ್ಡೇಟ್ ಮಾಡಿ
 
-;Plugins
-ಪ್ಲಗ್‌ಇನ್‌ಗಳು
+
+;Supported Devices
+ಬೆಂಬಲಿತ ಸಾಧನಗಳು
+
+
