--- a/ko/main.lang
+++ b/ko/main.lang
@@ -397,5 +397,12 @@ Mozilla Firefox. 윈도 XP에서도 최신 웹 기술을 제공합니다.
 ;Upgrade now
 지금 업그레이드하기
 
+
 ;Update now
 지금 업그레이드하기
+
+
+;Supported Devices
+지원 기기
+
+
