--- a/lg/main.lang
+++ b/lg/main.lang
@@ -163,7 +163,7 @@ Firefox eri kumutindo, naye version gyoyina kati eya flash palyer eyinza okuleta
 
 
 ;Features
-Embeera 
+Embeera
 
 
 ;Customize
@@ -400,3 +400,9 @@ Upgrade now
 
 ;Update now
 Update now
+
+
+;Supported Devices
+;Supported Devices
+
+
