--- a/lij/main.lang
+++ b/lij/main.lang
@@ -1,4 +1,4 @@
-﻿;Navigation
+;Navigation
 Navegaçión
 
 
@@ -273,6 +273,7 @@ Lêzi bén l'informatîva in sciâ privacy de Mozilla e acétta faxendo 'na crox
 ;Please enter your email address and review the Mozilla Privacy Policy.
 Scrîvi o teu indirìsso email e rivéddi a polìtica da privacy de Mozilla.
 
+
 ;Mobile
 Telefonìn
 
@@ -399,5 +400,9 @@ Agiórna òua
 
 ;Update now
 Agiórna òua
+
+
+;Supported Devices
+Aparâti soportæ
 
 
