--- a/ml/main.lang
+++ b/ml/main.lang
@@ -373,6 +373,7 @@ Firefox നവീന ഭാവത്തില്‍... കണ്ടറിയൂ.
 ;Super speed
 അടിപൊളി വേഗത
 
+
 ;Stunning graphics
 അടിപോളി ഗ്രാഫിക്സ്
 
@@ -399,5 +400,9 @@ Firefox നവീന ഭാവത്തില്‍... കണ്ടറിയൂ.
 
 ;Update now
 ഉടന്‍ പുതുക്കുക
+
+
+;Supported Devices
+പിന്തുണയ്ക്കുന്ന ഡിവൈസുകള്‍
 
 
