--- a/mn/main.lang
+++ b/mn/main.lang
@@ -1,6 +1,7 @@
 ;Navigation
 Гол цэс
 
+
 ;Press area
 Туслах материал
 
@@ -244,6 +245,7 @@ PC болон гар утсаа ижилсүүлэх
 ;Learn More
 Өшөө илүүг сурах
 
+
 ;Watch the video
 Бичлэг үзэх
 
@@ -253,7 +255,7 @@ WebM хэлбэр
 
 
 ;Ogg Theora format
-Ogg Theora хэлбэр 
+Ogg Theora хэлбэр
 
 
 ;MPEG-4 format
@@ -359,12 +361,14 @@ PC
 ;Firefox for mobile
 Гар утсан дахь Firefox
 
+
 ;Email
 И-мэйл хаяг
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
 Mozilla Firefox. Windows XP-д ч гэсэн сүүлийн үеийн вэб технологиор хангаж байна.
+
 
 ;Super speed
 Гайхалтай хурд
@@ -387,7 +391,7 @@ Mozilla Firefox. Windows XP-д ч гэсэн сүүлийн үеийн вэб т
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-Та Firefox-н хуучин хувилбарыг ашиглаж байна. Аюулгүй байдлаа хангаж <a href="%s">шинэчлэлт хийнэ</a> үү! <br/>Шинэ чадвар, аюулгүйн байдлын шинэчлэлттэй болон илүү хурдан Firefox-г ашиглаж үзнэ үү. Үнэгүйгээр маш хурдан шинэчлэл хийх боломжтой. 
+Та Firefox-н хуучин хувилбарыг ашиглаж байна. Аюулгүй байдлаа хангаж <a href="%s">шинэчлэлт хийнэ</a> үү! <br/>Шинэ чадвар, аюулгүйн байдлын шинэчлэлттэй болон илүү хурдан Firefox-г ашиглаж үзнэ үү. Үнэгүйгээр маш хурдан шинэчлэл хийх боломжтой.
 
 
 ;Upgrade now
@@ -396,5 +400,9 @@ Mozilla Firefox. Windows XP-д ч гэсэн сүүлийн үеийн вэб т
 
 ;Update now
 Одоо шинэчлэх
+
+
+;Supported Devices
+Supported devices
 
 
