--- a/ro/main.lang
+++ b/ro/main.lang
@@ -389,6 +389,7 @@ Utilizezi o versiune veche de Firefox. Actualizează pentru a fi în siguranță
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
 Ai nevoie de actualizare! Vei fi în siguranță în mai puțin de un minut. < /br> Începe să folosești noul Firefox pentru cea mai bună navigare și personalizare a Web-ului.
 
+
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 Utilizezi o versiune mai veche de Firefox. Obține <a href="%s">actualizarea</a> pentru a fi în siguranță! <br/> Încearcă ultimele funcționalități, actualizările de securitate și cel mai rapid Firefox. Descarcă actualizarea gratuită în mai puțin de un minut.
 
@@ -399,3 +400,9 @@ Actualizează acum
 
 ;Update now
 Actualizează acum
+
+
+;Supported Devices
+Dispozitive suportate
+
+
