--- a/ru/main.lang
+++ b/ru/main.lang
@@ -402,3 +402,7 @@ Mozilla Firefox. Доступ к современному Интернету с 
 Обновитесь прямо сейчас
 
 
+;Supported Devices
+Поддерживаемые устройства
+
+
