--- a/sk/main.lang
+++ b/sk/main.lang
@@ -385,14 +385,24 @@ Najnovšie technológie
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
 Používate starú verziu prehliadača Firefox. Aby ste ostali v bezpečí, mali by ste aktualizovať. <br/> <a href="%s">Získajte voľne dostupnú aktualizáciu</a> za menej ako minútu a užite si najnovšie funkcie, rýchlosť a vylepšenú bezpečnosť.
 
+
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
 Mali by ste aktualizovať! Ostaňte v bezpečí za menej ako minútu. <br/> Začnite používať nový Firefox a užite si vylepšené prehliadanie a prispôsobenie na webe. <br/> Je rýchly a zadarmo.
+
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 Používate staršiu verziu prehliadača Firefox. <a href="%s">Získajte aktualizáciu</a> a ostaňte v bezpečí. <br/> Užite si najnovšie funkcie, vylepšenú bezpečnosť a doteraz najrýchlejší Firefox. Prevezmite si voľne dostupnú aktualizáciu za menej ako minútu.
 
+
 ;Upgrade now
 Aktualizujte teraz
 
+
 ;Update now
 Aktualizujte teraz
+
+
+;Supported Devices
+Podporované zariadenia
+
+
