--- a/te/main.lang
+++ b/te/main.lang
@@ -343,7 +343,7 @@ MPEG-4 ఫార్మాటు
 
 
 ;Download for <span>Android</span>
- <span>ఆండ్రాయిడ్</span> కొరకు  దింపుకోలు
+<span>ఆండ్రాయిడ్</span> కొరకు  దింపుకోలు
 
 
 ;Free from the Android Market
@@ -392,7 +392,6 @@ MPEG-4 ఫార్మాటు
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 ఫైర్‌ఫాక్స్  పాత రూపాన్ని మీరు వాడుతున్నారు. సురక్షితంగా వుండటానికి <a href="%s">నవీకరించండి</a>.<br/> తాజా సౌలభ్యాలు, వేగం మరియు రక్షణ సమస్యలకు పరిష్కారాల అనుభవాలు పొందండి. ఒక్క నిముషం లోపల<a href="%s">ఉచితంగా కొత్త రూపాన్ని </a>దింపుకోండి .
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 
 
 ;Upgrade now
@@ -401,5 +400,9 @@ You're using an older version of Firefox. Get <a href="%s">your update</a> to st
 
 ;Update now
 ఇప్పుడే తాజాపరచు
+
+
+;Supported Devices
+తోడ్పాటున్న పరికరాలు
 
 
