--- a/tr/main.lang
+++ b/tr/main.lang
@@ -402,3 +402,7 @@ Firefox'un eski bir sürümünü kullanıyorsunuz. Güvende kalmak için <a href
 Şimdi güncelle
 
 
+;Supported Devices
+Desteklenen aygıtlar
+
+
