--- a/vi/main.lang
+++ b/vi/main.lang
@@ -321,6 +321,7 @@ Thử giao diện mới của Firefox.
 ;Browse the future of the Web.
 Duyệt tương lai của Web.
 
+
 ;See Firefox with a new look and feel.
 Xem giao diện mới của Firefox.
 
@@ -399,5 +400,9 @@ Nâng cấp ngay
 
 ;Update now
 Cập nhật ngay
+
+
+;Supported Devices
+Thiết bị hỗ trợ
 
 
