--- a/zh-TW/main.lang
+++ b/zh-TW/main.lang
@@ -393,9 +393,16 @@ Mozilla Firefox，讓您可以在 XP 當中體驗最新網頁技術。
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
 您正在使用舊版的 Firefox。立刻下載 <a href="%s">更新</a> 以保持您的安全！<br/>體驗最新技術、安全性修正，以及有史以來最快的 Firefox。立刻下載免費升級版，不用幾分鐘。
 
+
 ;Upgrade now
 立刻升級
 
+
 ;Update now
 立刻更新
+
+
+;Supported Devices
+支援裝置
+
 
