Bug 773702 - [ko] translate strings for Whatsnew page for Firefox 14
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107393 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ko/main.lang
+++ b/ko/main.lang
@@ -408,11 +408,11 @@ Mozilla Firefox. 윈도 XP에서도 최신 웹 기술을 제공합니다.
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+새로운 기능
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+개인 정보 정책
 
 
