--- a/ko/whatsnew.lang
+++ b/ko/whatsnew.lang
@@ -62,38 +62,35 @@ Android Robot은 <a href="%s">Creative Commons 3.0 Attribution License</a>하에
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-
+<a href="%s">Firefox 안드로이드 버전</a>을 통해 웹의 마력을 손 안에서 느끼세요. 빠르고 똑똑하고 안전합니다!
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+다시 되돌아온 모바일 브라우저를 사용해 보세요
 
 
 ;Firefox Features
-Firefox Features
+Firefox 주요 기능
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Firefox에 오신 것을 환영합니다
 
 
 ;Firefox Help
-Firefox Help
+Firefox 도움말
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Firefox 안드로이드 예술품
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+빠르고 똑똑하고 안전한
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
-
-
+되돌아온 모바일 브라우저를 받으세요.
