German translation of new strings for mobile.lang and main.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107395 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/mobile.lang
+++ b/de/mobile.lang
@@ -131,6 +131,6 @@ Sehen Sie sich alle Kanäle für Firefox Mobile an »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Kostenlos aus dem Google Play Store
 
 
