--- a/de/main.lang
+++ b/de/main.lang
@@ -408,11 +408,11 @@ Unterstützte Geräte
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Was ist neu
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Datenschutz
 
 
