[IT] Localizzed strings for thw What's New page, Bug. 773700. Waiting for QA
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107400 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/whatsnew.lang
+++ b/it/whatsnew.lang
@@ -62,38 +62,38 @@ Android Robot è stato riprodotto a partire da un lavoro creato e <a href="%s">c
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Scarica Firefox per Android</a> e metti nelle tue mani la potenza del Web. È veloce, intelligente e sicuro.
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Adesso scarica il browser mobile che si preoccupa solo di te
 
 
 ;Firefox Features
-Firefox Features
+Caratteristiche di Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Benvenuto in Firefox
 
 
 ;Firefox Help
-Firefox Help
+Aiuto di Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Immagine di Firefox per Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Veloce. Intelligente. Sicuro.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Installa il browser mobile che si preoccupa solo di te.
 
 
