--- a/it/main.lang
+++ b/it/main.lang
@@ -408,7 +408,7 @@ Dispositivi supportati
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Novità
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
