--- a/it/mobile.lang
+++ b/it/mobile.lang
@@ -131,6 +131,6 @@ Visualizza tutti i canali di aggiornamento per mobile »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Gratis su Google Play
 
 
