--- a/es-ES/main.lang
+++ b/es-ES/main.lang
@@ -123,7 +123,7 @@ Otros sistemas e idiomas
 
 
 ;Get Firefox
-Obtén Firefox
+Obtener Firefox
 
 
 ;Free Download
@@ -135,7 +135,7 @@ Descarga gratuita
 
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
-Tómate un momento para rellenar una breve encuesta y compartir tu opinión con nosotros.
+Te llevará solo unos minutos completar una breve encuesta y compartir tu opinión con nosotros.
 
 
 ;Close
@@ -207,11 +207,11 @@ MB {ok}
 
 
 ;MegaBytes
-MegaBytes {ok}
+Megabytes {ok}
 
 
 ;FAQ
-PUF
+FAQ
 
 
 ;Videos
@@ -235,15 +235,15 @@ Síguenos en:
 
 
 ;Customize with Add-ons
-Personaliza con Add-ons
+Personaliza con complementos
 
 
 ;Sync Your Desktop & Mobile
-Sincroniza tu ordenador y tu móvil
+Sincroniza tu equipo y tu dispositivo móvil
 
 
 ;Learn More
-Descubre más
+Más información
 
 
 ;Watch the video
@@ -263,15 +263,15 @@ Formato MPEG-4
 
 
 ;Whoops! Be sure to enter a valid email address.
-¡Uy! Asegúrate de introducir una dirección de correo válida.
+¡Uy! Asegúrate de escribir una dirección de correo válida.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Por favor, lee la política de privacidad de Mozilla acéptala marcando la casilla.
+Por favor, lee la política de privacidad de Mozilla y acéptala marcando la casilla.
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Por favor, introduce una dirección de correo y revisa la política de privacidad de Mozilla.
+Por favor, escribe una dirección de correo y revisa la política de privacidad de Mozilla.
 
 
 ;Mobile
@@ -283,7 +283,7 @@ Firefox actualizado
 
 
 ;Take a Look at Tomorrow's Web
-Echa un vistazo a la web del mañana
+Echa un vistazo a la Web del mañana
 
 
 ;Journey to the Future with Firefox
@@ -299,35 +299,35 @@ Experimenta Firefox
 
 
 ;The future of the Web is waiting for you!
-¡El futuro de la web te está esperando!
+¡El futuro de la Web te está esperando!
 
 
 ;The future of the Web starts now.
-El futuro de la web comienza ahora.
+El futuro de la Web comienza ahora.
 
 
 ;Try Firefox with a fresh look and feel.
-Prueba Firefox con una apariencia renovada.
+Prueba Firefox con un diseño renovado.
 
 
 ;Experience tomorrow's Web today.
-Experimenta hoy la web del mañana.
+Experimenta hoy la Web del mañana.
 
 
 ;Check out the new look and feel of Firefox.
-Comprueba la nueva apariencia de Firefox.
+Comprueba el nuevo diseño de Firefox.
 
 
 ;Browse the future of the Web.
-Descubre el futuro de la web
+Descubre el futuro de la Web.
 
 
 ;See Firefox with a new look and feel.
-Observa Firefox con una nueva apariencia.
+Mira Firefox con un nuevo diseño.
 
 
 ;Download Beta Now.
-Descargar la beta ahora.
+Descargar la Beta ahora.
 
 
 ;All Systems & Languages
@@ -367,11 +367,11 @@ Correo electrónico
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Trayendo la web moderna a XP.
+Mozilla Firefox. La innovación de la Web en XP.
 
 
 ;Super speed
-Súpervelocidad
+Supervelocidad
 
 
 ;Stunning graphics
@@ -383,23 +383,23 @@ Las últimas tecnologías
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-Estás usando una versión antigua de Firefox. ¡Actualiza para permanecer seguro! <br/> <a href="%s">Descarga la actualización gratuita</a> en menos de un minuto para obtener las últimas características, velocidad y mejoras de seguridad.
+Estás usando una versión antigua de Firefox. ¡Actualiza para mantener tu seguridad! <br/> <a href="%s">Descarga la actualización gratuita</a> en menos de un minuto para obtener las últimas características, la máxima velocidad y la mejor seguridad.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-¡Necesitas actualizar! Permanece seguro en menos de un minuto. <br/> Comienza a usar tu nuevo Firefox para una mejor navegación y personalización de la web. <br/>   ¡Es rápido y gratuito!
+¡Necesitas actualizar! Mantén tu seguridad dedicando menos de un minuto. <br/> Comienza a usar tu nuevo Firefox y obtendrás la mejor navegación y personalización de la Web. <br/>   ¡Es rápido y gratuito!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-Estás usando una versión antigua de Firefox. ¡Consigue <a href="%s">tu actualización</a> para permanecer seguro! <br/> Experimenta las últimas características, mejoras de seguridad y el Firefox más rápido hasta la fecha. Descarga la actualización gratuita en menos de un minuto.
+Estás usando una versión antigua de Firefox. ¡Obtén <a href="%s">tu actualización</a> para mantenerte seguro! <br/> Experimenta las últimas características, mejoras de seguridad y el Firefox más rápido. Descarga la actualización gratuita en menos de un minuto.
 
 
 ;Upgrade now
-Actualiza ahora
+Actualizar ahora
 
 
 ;Update now
-Actualiza ahora
+Actualizar ahora
 
 
 ;Supported Devices
@@ -408,11 +408,11 @@ Dispositivos compatibles
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Qué hay de nuevo
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privacidad
 
 
