[es] mobile.lang l10n updated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107403 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/mobile.lang
+++ b/es-ES/mobile.lang
@@ -46,7 +46,7 @@ Obtener Firefox Home para iPhone
 
 
 ;Download Beta for Android
-Descargar la beta para Android
+Descargar la Beta para Android
 
 
 ;Download
@@ -62,7 +62,7 @@ Gratis desde iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-Podrás experimentar las características más innovadoras y darnos tu opinión, ayudando a refinar y pulir lo que se incluirá en la versión final.
+Podrás experimentar las características más innovadoras y darnos tu opinión, ayudándonos a definir y perfeccionar lo que incluirá la versión final.
 
 
 ;Developer Tools
@@ -131,6 +131,6 @@ Mira todos nuestros canales para dispositivos móviles
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Gratis desde la tienda Google Play
 
 
