--- a/it/whatsnew.lang
+++ b/it/whatsnew.lang
@@ -79,7 +79,7 @@ Benvenuto in Firefox
 
 
 ;Firefox Help
-Aiuto di Firefox
+Supporto
 
 
 # This is the alternate text for the Android image for blind people
