--- a/de/whatsnew.lang
+++ b/de/whatsnew.lang
@@ -89,11 +89,11 @@ Grafik: Firefox für Android
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Schnell. Intelligent. Sicher
+Schnell. Intelligent. Sicher.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Holen Sie sich den Browser für Mobilgeräte, der Sie beschützt
+Holen Sie sich den Browser für Mobilgeräte, der Sie beschützt.
 
 
