[IT][QA]  Bug. 773700.  Localizzation finished
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107410 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/whatsnew.lang
+++ b/it/whatsnew.lang
@@ -62,7 +62,7 @@ Android Robot è stato riprodotto a partire da un lavoro creato e <a href="%s">c
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Scarica Firefox per Android</a> e metti nelle tue mani la potenza del Web. È veloce, intelligente e sicuro.
+<a href="%s">Scarica Firefox per Android</a> e e sfrutta al massimo le potenzialità del Web in movimento. È veloce, intelligente e sicuro.
 
 
 ;Now get the mobile browser that’s got your back
