Bug 773708 - [ru] translate strings for Whatsnew page for Firefox 14
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107427 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ru/mobile.lang
+++ b/ru/mobile.lang
@@ -131,6 +131,6 @@ Firefox Home для <span>iPhone</span>
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Бесплатно из магазина Google Play
 
 
