--- a/ru/whatsnew.lang
+++ b/ru/whatsnew.lang
@@ -62,38 +62,38 @@
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Загрузите Firefox для Android</a> и вся мощь Интернета окажется в ваших руках. Он быстрый, умный и безопасный!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Теперь загрузите мобильный браузер, на который всегда можно положиться
 
 
 ;Firefox Features
-Firefox Features
+Возможности Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Добро пожаловать в Firefox
 
 
 ;Firefox Help
-Firefox Help
+Справка Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Изображение Firefox для Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Быстрый. Умный. Безопасный.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Загрузите мобильный браузер, на который всегда можно положиться.
 
 
