Translate new strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107430 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ar/main.lang
+++ b/ar/main.lang
@@ -408,11 +408,11 @@
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+ما الجديد
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+الخصوصية
 
 
