--- a/ar/whatsnew.lang
+++ b/ar/whatsnew.lang
@@ -62,38 +62,38 @@
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">احصل على فيَرفُكس لأندرويد</a> واجعل قوة الوب بين يديك. سريع، ذكي، آمن.
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+احصل الآن على متصفح وب الجوّال الذي لن يخذلك
 
 
 ;Firefox Features
-Firefox Features
+خصائص فيَرفُكس
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+مرحبا مع فيَرفُكس
 
 
 ;Firefox Help
-Firefox Help
+مساعدة فيَرفُكس
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+الشعارات الرسومية لفيَرفُكس أندرويد
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+سريع. ذكيّ. آمن.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+احصل على متصفح وب الجوّال الذي لن يخذلك.
 
 
