--- a/da/mobile.lang
+++ b/da/mobile.lang
@@ -131,6 +131,6 @@ Se alle vores kanaler for mobilen »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Gratis fra Google Play
 
 
