--- a/da/whatsnew.lang
+++ b/da/whatsnew.lang
@@ -62,38 +62,38 @@ Android-robotten er lavet ud fra arbejde skabt og <a href="%s">delt af Google</a
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Hent Firefox til Android</a>, så du får mest muligt ud af internettet. Den er hurtig, smart og sikker!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Hent den mobil-browser, der beskytter dig på nettet
 
 
 ;Firefox Features
-Firefox Features
+Funktioner i Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Velkommen til Firefox
 
 
 ;Firefox Help
-Firefox Help
+Hjælp til Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Firefox til Android-illustration
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Hurtig. Smart. Sikker.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Hent den mobil-browser, der beskytter dig på nettet.
 
 
