--- a/hr/main.lang
+++ b/hr/main.lang
@@ -408,11 +408,11 @@ Podržani uređaji
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Što je novo
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privatnost
 
 
