--- a/nl/main.lang
+++ b/nl/main.lang
@@ -408,11 +408,9 @@ Ondersteunde apparaten
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Wat is nieuw
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
-
-
+Privacy {ok}
