--- a/nl/whatsnew.lang
+++ b/nl/whatsnew.lang
@@ -62,20 +62,20 @@ De Android Robot is voortgekomen uit werk dat wordt gemaakt en <a href="%s">gede
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Download Firefox voor Android</a> en leg de kracht van het internet in uw handen. Het is snel, slim en veilig!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Kies nu de mobiele browser die u beschermt
 
 
 ;Firefox Features
-Firefox Features
+Firefox-functies
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Welkom bij Firefox
 
 
 ;Firefox Help
@@ -84,16 +84,14 @@ Firefox Help
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Firefox voor Android-illustraties
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Snel. Slim. Veilig.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
-
-
+Kies de mobiele browser die u beschermt.
