--- a/nl/whatsnew.lang
+++ b/nl/whatsnew.lang
@@ -79,7 +79,7 @@ Welkom bij Firefox
 
 
 ;Firefox Help
-Firefox Help
+Firefox Help {ok}
 
 
 # This is the alternate text for the Android image for blind people
