l10n: si, .lang files updates by Danishka Navin
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107443 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/si/download.lang
+++ b/si/download.lang
@@ -1,5 +1,5 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-මොසිල්ලා ෆයර්ෆොක්ස්, නිදහස් වෙබ් බ්‍රව්සරය, නිර්මාණය කරනු ලබන ගෝලීය ලාභ-නොලබන ව්‍යාපෘතිය සියළු දෙනාගේ සහභාගීත්වයෙන් පොදු යහපත උදෙසා අනාගත වෙබ් තාක්ෂණය හැඩගැස්සවීමට බැදී සිටියි.
+Mozilla Firefox, නිදහස් වෙබ් බ්‍රව්සරය, නිර්මාණය කරනු ලබන ගෝලීය ලාභ නොලබන ව්‍යාපෘතිය සියලු දෙනාගේ සහභාගීත්වයෙන් පොදු යහපත උදෙසා අනාගත වෙබ් තාක්ෂණය හැඩගැස් වීමට බැදී සිටියි.
 
 
 ;Different by Design
@@ -7,7 +7,7 @@
 
 
 ;Proudly <span>non-profit</span>
-අභිමානවත් <span>ලාභ-නොලබන </span>ව්‍යාපෘතියකි
+අභිමානවත් <span>ලාභ නොලබන </span>ව්‍යාපෘතියකි
 
 
 ;Innovating <span>for you</span>
@@ -15,19 +15,19 @@
 
 
 ;Fast, flexible, <span>secure</span>
-වේගවත්, නම්‍යශීලීයි, <span>ආරක්ෂිතයි</span>
+වේගවත්, නම්‍යශීලී, <span>ආරක්ෂිත</span>
 
 
 ;Thanks for choosing Firefox!
-ෆයර්ෆොක්ස් තෝරාගැනීම පිළිබදව ඔබට ස්තුතියි!
+Firefox තෝරාගැනීම පිළිබදව ඔබට ස්තුතියි!
 
 
 ;Your download should automatically begin in a few seconds, but if not, <a href="%s">click here</a>.
-ඔබගේ බාගත කිරීම තව ස්වල්ප මොහොතකින් ඇර‍ඹෙනු ඇත, එසේ නොවූවේ නම්, <a href="%s">මෙහි ක්ලික් කරන්න</a>.
+ඔබගේ බාගැණීම තව ස්වල්ප මොහොතකින් ඇරඹෙනු ඇත, එසේ නොවූවේ නම්, <a href="%s"> මෙහි ක්ලික් කරන්න</a>.
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
-ලාභ-නොලබන ව්‍යාපෘතියක් ලෙස, ඹබ වෙනුවෙන් නව්‍යතාවයෙන් යුත් වඩා හොඳම දේ නිර්මාණය කිරීමට අපට කිසිඳු බාධාවක් නොමැත. ඔබ මෙම වෙනස ආදරයෙන් අත්විඳිනු ඇත.
+ලාභ නොලබන ව්‍යාපෘතියක් ලෙස, ඔබ වෙනුවෙන් නව්‍යතාවයෙන් යුත් වඩා හොඳම දේ නිර්මාණය කිරීමට අපට කිසිඳු බාධාවක් නොමැත. ඔබ මෙම වෙනස ආදරයෙන් අත්විඳිනු ඇත.
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
@@ -35,6 +35,6 @@
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Mozilla Firefox වෙබ් ගවේශකය
 
 
