Done translation for file dowload dot lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107447 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ms/newsletter.lang
+++ b/ms/newsletter.lang
@@ -3,123 +3,102 @@
 ;Get Monthly News
 Dapatkan Berita Bulanan
 
-
 ;Your Email Address
-Your Email Address
-
+Alamat Emel Anda
 
 ;Text
-Text
-
+Teks
 
 ;Available Languages
-Available Languages
-
+Bahasa-bahasa yang tersedia
 
 ;Select country
-Select country
-
+Pilih negara
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
-
+Whoops! Pastikan anda meletakkan alamat emel yang sah.
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
-
+Sila baca Polisi Privasi Mozilla dan bersetuju  dengan menyemak tanda kotak.
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-I agree to the <a href="%s">Privacy Policy</a>
-
+Saya bersetuju untuk <a href="%s">Polisi Keselamatan</a>
 
 ;Sign me up!
-Sign me up!
-
+Daftarkan saya!
 
 ;We will only send you Mozilla-related information.
-We will only send you Mozilla-related information.
-
+Kami hanya akan menghantar maklumat yang berkaitan dengan Mozilla.
 
 ;Thanks for Subscribing!
-Thanks for Subscribing!
-
+Terima Kasih kerana Melanggan!
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-
+Kami memandang ke hadapan untuk begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Melanggan kepada pengemaskinian bulanan dan kekal terkini dengan berita Mozilla, termasuk tip-tip terbaru dan trik untuk mendapatkan yang terbaik daripada pelayar Firefox anda. Ia adalah cara yang sempurna bagi kita untuk terus berhubung!
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Kami baru sahaja menghantar email kepastian. Sila klik pada pautan ini untuk pengesahan langganan terhadap senarai mel
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
-
+Baca semua mengenai kami dalam<span>berita<span>
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Langganan berita anda sudah berjaya
 
 ;Format
-Format
+Format {ok}
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
-
+Anda telah berjaya! <span> Tetapi, masih terdapat lagi <./span>
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Mahu dapatkan maklumat yang paling relevan? Beritahu kami sedikit sebanyak tentang diri anda. Dan jika anda di sini, daftar untuk berita Mozilla yang lain. 
 
 ;Firefox & You
-Firefox & You
+Firefox & Anda
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Berita kami
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Dapatkan tip-tip dan trik yang terbaru duntuk mendapatkan yang terbak daripada pelayar kegemaran anda.
 
 ;Firefox Mobile
 Firefox Mobile
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Belajar mengenai ciri-ciri terbaru dan add-ons  yang terhangat Firefox mobile.
 
 ;Beta News
-Beta News
+Berita Beta
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
-
+Baca mengenai ciri-ciri terbaru untuk Firefox desktop dan mobile sebelum keluaran terakhirnya.
 
 ;Let’s Be Friends!
-Let’s Be Friends!
-
+Mari berkawan!
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-
+Firefox juga adalah laman sosial rangkaian sosial kegemaran anda. Berhubung dengan kami dan sertai perbincangan kami
 
 ;Manage your <span>Newsletter Subscriptions
-Manage your <span>Newsletter Subscriptions
-
+Uruskan <span> Langganan Berita anda
 
 ;Subscribe
-Subscribe
-
+Langgan
 
 ;Unsubscribe
-Unsubscribe
-
+Batal langganan
 
 ;Check here if you’d like to be removed from all Mozilla emails'
-Check here if you’d like to be removed from all Mozilla emails'
-
+Semak di sini jika anda mahu dikeluarkan daripada semua emel Mozilla
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
-
+Singkirkan saya dari emel Mozilla
 
 ;Save Preferences
-Save Preferences
+Simpan keutamaan
+
